@@ -11,6 +11,7 @@ import dowob.xyz.stockwebv2.infrastructure.web.TraceIdFilter;
 import dowob.xyz.stockwebv2.trading.service.TradingService;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Valid;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.MDC;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
@@ -58,6 +59,11 @@ public class TradingController {
     @PreAuthorize("hasAuthority('PORTFOLIO_VIEW')")
     public ApiResponse<PageResponse<TradeDto>> listTrades(
         @RequestParam(required = false) String symbol,
+        @RequestParam(required = false) String type,
+        @RequestParam(required = false) String dateFrom,
+        @RequestParam(required = false) String dateTo,
+        @RequestParam(required = false) String sort,
+        @RequestParam(required = false) String direction,
         @RequestParam(defaultValue = "0") String page,
         @RequestParam(defaultValue = "20") String size,
         Authentication authentication
@@ -65,6 +71,11 @@ public class TradingController {
         return ApiResponse.success(tradingService.listTrades(
             authenticatedUserId(authentication),
             symbol,
+            type,
+            dateFrom,
+            dateTo,
+            sort,
+            direction,
             parseQueryInt(page, "page"),
             parseQueryInt(size, "size")
         ), meta());
@@ -83,7 +94,7 @@ public class TradingController {
     }
 
     private Long authenticatedUserId(Authentication authentication) {
-        if (authentication == null || authentication.getName() == null || authentication.getName().isBlank()) {
+        if (authentication == null || StringUtils.isBlank(authentication.getName())) {
             throw new BusinessException(ErrorCode.AUTH_INVALID_CREDENTIALS, ErrorCode.AUTH_INVALID_CREDENTIALS.defaultMessage());
         }
         try {
